--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -24,8 +24,43 @@ body {
     font-family: 'Lora', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #857e7e;
     color: #ECE2D0;
+}
+
+.background-base {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 200%;
+  background-color: #1e1e1e;
+  z-index: -2;
+}
+
+.parallax-container {
+  position: relative;
+  min-height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.parallax-bg {
+  background-image: url('https://res.cloudinary.com/dwhennrjl/image/upload/v1757606521/WoodBound/MasterBackgroundTiling_qy8pjb.png');
+  background-repeat: repeat;
+  background-size: 1500px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 300%;
+  opacity: 0.7;
+  z-index: -1;
+}
+
+.page-content {
+  position: relative;
+  z-index: 1;
+  padding: 5vh 5vw;
 }
 
 h1, h2, h3 {
@@ -34,7 +69,7 @@ h1, h2, h3 {
 
 h1 {
     font-family: 'Mailman', sans-serif;
-    font-size: 4rem;
+    font-size: 8rem;
     font-weight: 300;
     margin-bottom: 1rem;
     color: #ECE2D0;
@@ -68,17 +103,6 @@ a:hover {
   opacity: 0.9;
   transform: scale(1.01);
   transition: all 0.3s ease;
-}
-
-.site-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: #111;
-  padding: 10px 0;
-  text-align: center;
-  z-index: 1000;
 }
 
 .site-footer {
