--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,11 +23,15 @@
 
 </head>
 <body>
-    <div class="container text-center">
+  <div class="background-base"></div>
+  <div class="parallax-container">
+    <div class="parallax-bg" id="parallax-bg"></div>
+    <div class="page-content">
         <h1 class="mt-3">Iron Quill Games Studio</h1>
         <p class="lead">
             We’re an independent Irish game studio creating the kinds of experiences we want to find - the dark gems, the cult classics, the ones that stay with you.
         </p>
+
 
         <hr>
 
@@ -40,7 +44,7 @@
         <p>Explore a cursed board, move your wooden knight, and risk everything for ancient relics.</p>
 
       <footer class="site-footer">
-        <ul class="social-icons">
+        <ul class="social-icons m-3">
           <li>
             <a href="https://store.steampowered.com/app/3565300/WoodBound" target="_blank" aria-label="Steam">
               <i class="fa-brands fa-steam"></i>
@@ -62,11 +66,22 @@
             </a>
           </li>
         </ul>
+        <p class="footer-credit pt-3">© Iron Quill Games Studio 2025</p>
       </footer>
 
     </div>
+  </div>
 
-    <!-- Bootstrap JS (optional) -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <!-- Parallax Background logic-->
+    <script>
+      window.addEventListener('scroll', () => {
+        const scroll = window.scrollY;
+        const parallax = document.getElementById('parallax-bg');
+        parallax.style.transform = `translateY(${scroll * -0.4}px)`;
+      });
+    </script>
 </body>
 </html>
