--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Iron Quill Games Studio</title>
+    <link rel="icon" type="image/png" href="https://res.cloudinary.com/dwhennrjl/image/upload/v1758216393/WoodBound/LargeBoneFeatherFavicon_tvhyf8.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Google Fonts -->
