--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -74,7 +74,7 @@
         </div>
 
         <!-- Right column: Description -->
-        <div class="description-text ms-3">
+        <div class="description-text">
           <p class="handwriting">Woodbound</p>
           <hr>
           <p>Iron Quill Games Studio's upcoming debut.</p>
@@ -106,7 +106,7 @@
 
       <div class="footgap"></div>
 
-      <footer class="site-footer pt-2">
+      <footer class="site-footer">
         <ul class="social-icons">
           <li>
             <a href="https://store.steampowered.com/app/3565300/WoodBound" target="_blank" aria-label="Steam">
